--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:example@localhost:5432/postgres"
+DATABASE_URL="postgresql://postgres:postgres@localhost:6500/postgres"
 
 # Next Auth Discord Provider
 # NOTE: The keys below where intentionally committed 
